fix: fix container width on desktop and fix distorted images due to height

--- a/css/styles.css
+++ b/css/styles.css
@@ -266,9 +266,8 @@ a.skip:hover {
     background-color: #ccc;
     display: block;
     margin: 0;
-    max-width: 100%;
-    min-height: 248px;
-    min-width: 100%;
+    width: 100%;
+    height: auto;
 }
 
 #restaurants-list li article {
@@ -447,7 +446,7 @@ a.skip:hover {
 
 @media (min-width: 992px) {
     #maincontent {
-        width: 75%;
+        width: 98%;
         margin: 0 auto;
         display: flex;
         flex-wrap: wrap;
@@ -485,7 +484,7 @@ a.skip:hover {
     }
     #restaurant-container,
     #reviews-container {
-        width: 45vw;
+        width: 50vw;
     }
     #restaurant-container {
         margin-top: 120px;
@@ -494,7 +493,7 @@ a.skip:hover {
         height: calc( 100vh - 192px);
         position: fixed;
         right: 10px;
-        width: 41vw;
+        width: 45vw;
     }
     .inside #footer {
         position: fixed;
@@ -504,7 +503,7 @@ a.skip:hover {
         padding-bottom: 70px;
     }
     #breadcrumb {
-        padding: 10px 13% 16px;
+        padding: 10px 2% 16px;
     }
 
 
